--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PrintingApp</string>
     <string name="manufacturer_name">Manufacturer</string>
     <string name="add_spool">Add Spool</string>
+    <string name="empty_not_saved">Word not saved because it is empty.</string>
 </resources>
