--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
         <item>Glow in the Dark</item>
         <item>Carbon Fiber</item>
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cancel_delete">Cancel</string>
+    <string name="confirm_delete">Delete</string>
+    <string name="dialog_delete_spool">Are you sure you want to delete this spool?</string>
 </resources>
